--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>♥Damjan Personal Site♥</title>
     </head>
     <body style="background-color: beige">
-        <img src="./Images/profile_pic2.png" alt="Damjan profile picture" width="250" height="175">
+        <img src="profile_pic2.png" alt="Damjan profile picture" width="250" height="175">
         <h1>Damjan Skulic</h1>
         <a href="contact-me.html">My Contact</a>
         <p><em>Biophysics graduate and Data Scientist</em></p>
