--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
         <title>♥Damjan Personal Site♥</title>
     </head>
     <body style="background-color: beige">
-        <img src="https://https://github.com/SkulicDamian/cv/tree/main/Images/profile_pic2.PNG" alt="Damjan profile picture" width="250" height="175">
-        <h1>Damjan Skulic</h1>
-        <a href="contact-me.html">My Contact</a>
-        <p><em>Biophysics graduate and Data Scientist</em></p>
+            <table>
+            <tr>
+                <td><img src="https://https://github.com/SkulicDamian/cv/tree/main/Images/profile_pic2.PNG" alt="Damjan profile picture" width="250" height="175"></td>
+                    <td><h1>Damjan Skulic</h1> <a href="contact-me.html">My Contact</a>
+                    <p><em>Biophysics graduate and Data Scientist</em></p>
 
-        <p>Biophysics degree from Concordia University. Certification at HEC Montreal in business analytics.
-          Currently doing python/big data/machine learning at Dataquest.
-            Experience in fiber optic labs, machine learning, protein databanks.
-            Text processing in command line SQL, API and Web Scrapping Statistics and probability Tutoring Experience
-          for mostly highschool pure science. Multidisciplinary background!
-            Experienced in Linux/Mathematica/Excel/R/SAS
-            Knowledgeable in Java, Unix operating system.Panda/Numpy/Mathplotlib Data Cleaning and Analysis
-        </p>
+                    <p>Biophysics degree from Concordia University. Certification at HEC Montreal in business analytics.
+                  Currently doing python/big data/machine learning at Dataquest.
+                    Experience in fiber optic labs, machine learning, protein databanks.
+                    Text processing in command line SQL, API and Web Scrapping Statistics and probability Tutoring Experience
+                  for mostly highschool pure science. Multidisciplinary background!
+                    Experienced in Linux/Mathematica/Excel/R/SAS
+                    Knowledgeable in Java, Unix operating system.Panda/Numpy/Mathplotlib Data Cleaning and Analysis
+                    </p></td>
+            </tr>
+         </table>
+       
         <hr>
         <h3>Education Background</h3>
             <ul>
