--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body style="background-color: beige">
             <table>
             <tr>
-                <td><img src="https://https://github.com/SkulicDamian/cv/tree/main/Images/profile_pic2.PNG" alt="Damjan profile picture" width="250" height="175"></td>
+                <td><img src="https://github.com/SkulicDamian/cv/tree/main/Images/profile_pic2.PNG" alt="Damjan profile picture" width="250" height="175"></td>
                     <td><h1>Damjan Skulic</h1> <a href="contact-me.html">My Contact</a>
                     <p><em>Biophysics graduate and Data Scientist</em></p>
 
