--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <table>
             <tr>
                 
-                <td><img src="https://github.com/SkulicDamian/cv/blob/main/Images/profile_pic2.PNG" alt="Damjan profile picture" width="250" height="175"></td>
+                <td><img src="https://skulicdamian.github.io/cv/Images/profile_pic2.PNG" alt="Damjan profile picture" width="250" height="175"></td>
                     <td><h1>Damjan Skulic</h1> <a href="contact-me.html">My Contact</a>
                     <p><em>Biophysics graduate and Data Scientist</em></p>
 
